refactor: Use StandardCharsets
- replace "UTF" by StandardCharsets.UTF_8

related to #88, #348